--- a/OctagonPlatform/Views/Terminals/Create.cshtml
+++ b/OctagonPlatform/Views/Terminals/Create.cshtml
@@ -8,10 +8,6 @@
 
 
 <br/>
-<br />
-<br />
-<br />
-<br />
 
 <div>
     <br><br />
@@ -160,76 +156,102 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.VeppSerialNumber)
-                @Html.TextBoxFor(m => m.VeppSerialNumber, new { @class = "form-control", autofocus = "autofocus", placeholder = "1117060030" })
-                @Html.ValidationMessageFor(m => m.VeppSerialNumber)
+                @Html.LabelFor(m => m.VeppSerialNumber, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(m => m.VeppSerialNumber, new { @class = "form-control", autofocus = "autofocus", placeholder = "1117060030" })
+                    @Html.ValidationMessageFor(m => m.VeppSerialNumber)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.SoftwareVersion)
-                @Html.TextBoxFor(m => m.SoftwareVersion, new { @class = "form-control", autofocus = "autofocus", placeholder = "V301.1.1" })
-                @Html.ValidationMessageFor(m => m.SoftwareVersion)
+                @Html.LabelFor(m => m.SoftwareVersion, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(m => m.SoftwareVersion, new { @class = "form-control", autofocus = "autofocus", placeholder = "V301.1.1" })
+                    @Html.ValidationMessageFor(m => m.SoftwareVersion)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.FimwareVersion)
-                @Html.TextBoxFor(m => m.FimwareVersion, new { @class = "form-control", autofocus = "autofocus", placeholder = "V301.1.1" })
-                @Html.ValidationMessageFor(m => m.FimwareVersion)
+                @Html.LabelFor(m => m.FimwareVersion, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(m => m.FimwareVersion, new { @class = "form-control", autofocus = "autofocus", placeholder = "V301.1.1" })
+                    @Html.ValidationMessageFor(m => m.FimwareVersion)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.BankAccountId)
-                @Html.DropDownListFor(m => m.BankAccountId, new SelectList(Model.BankAccounts, "Id", "NickName"), "", new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.BankAccountId)
+                @Html.LabelFor(m => m.BankAccountId, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.DropDownListFor(m => m.BankAccountId, new SelectList(Model.BankAccounts, "Id", "NickName"), "", new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.BankAccountId)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.SurchargeAmountFee)
-                @Html.TextBoxFor(m => m.SurchargeAmountFee, new { @class = "form-control", autofocus = "autofocus", placeholder = "" })
-                @Html.ValidationMessageFor(m => m.SurchargeAmountFee)
+                @Html.LabelFor(m => m.SurchargeAmountFee, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(m => m.SurchargeAmountFee, new { @class = "form-control", autofocus = "autofocus", placeholder = "" })
+                    @Html.ValidationMessageFor(m => m.SurchargeAmountFee)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.SurchargePercentageFee)
-                @Html.TextBoxFor(m => m.SurchargePercentageFee, new { @class = "form-control", autofocus = "autofocus", placeholder = "%" })
-                @Html.ValidationMessageFor(m => m.SurchargePercentageFee)
+                @Html.LabelFor(m => m.SurchargePercentageFee, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(m => m.SurchargePercentageFee, new { @class = "form-control", autofocus = "autofocus", placeholder = "%" })
+                    @Html.ValidationMessageFor(m => m.SurchargePercentageFee)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.SurchargeType)
-                @Html.EnumDropDownListFor(m => m.SurchargeType, "", new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.SurchargeType)
+                @Html.LabelFor(m => m.SurchargeType, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.EnumDropDownListFor(m => m.SurchargeType, "", new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.SurchargeType)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.WhoInitiates)
-                @Html.EnumDropDownListFor(m => m.WhoInitiates, "", new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.WhoInitiates)
+                @Html.LabelFor(m => m.WhoInitiates, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.EnumDropDownListFor(m => m.WhoInitiates, "", new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.WhoInitiates)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.CryptoPercentChargeAmount)
-                @Html.TextBoxFor(m => m.CryptoPercentChargeAmount, new { @class = "form-control", autofocus = "autofocus", placeholder = "4.99" })
-                @Html.ValidationMessageFor(m => m.CryptoPercentChargeAmount)
+                @Html.LabelFor(m => m.CryptoPercentChargeAmount, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(m => m.CryptoPercentChargeAmount, new { @class = "form-control", autofocus = "autofocus", placeholder = "4.99" })
+                    @Html.ValidationMessageFor(m => m.CryptoPercentChargeAmount)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.InstalledDate)
-                @Html.TextBoxFor(m => m.InstalledDate, "{0:d MMM yyyy}", new { @class = "form-control", autofocus = "autofocus", placeholder = "1 Jan 2000", @type = "date" })
-                @Html.ValidationMessageFor(m => m.InstalledDate)
+                @Html.LabelFor(m => m.InstalledDate, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(m => m.InstalledDate, "{0:d MMM yyyy}", new { @class = "form-control", autofocus = "autofocus", placeholder = "1 Jan 2000", @type = "date" })
+                    @Html.ValidationMessageFor(m => m.InstalledDate)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.LoadedBy)
-                @Html.TextBoxFor(m => m.LoadedBy, new { @class = "form-control", autofocus = "autofocus", placeholder = "Leo" })
-                @Html.ValidationMessageFor(m => m.LoadedBy)
+                @Html.LabelFor(m => m.LoadedBy, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(m => m.LoadedBy, new { @class = "form-control", autofocus = "autofocus", placeholder = "Leo" })
+                    @Html.ValidationMessageFor(m => m.LoadedBy)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Balance)
-                @Html.TextBoxFor(m => m.Balance, new { @class = "form-control", autofocus = "autofocus", placeholder = "1500" })
-                @Html.ValidationMessageFor(m => m.Balance)
+                @Html.LabelFor(m => m.Balance, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(m => m.Balance, new { @class = "form-control", autofocus = "autofocus", placeholder = "1500" })
+                    @Html.ValidationMessageFor(m => m.Balance)
+                </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.MinAmmountCash)
-                @Html.TextBoxFor(m => m.MinAmmountCash, new { @class = "form-control", autofocus = "autofocus", placeholder = "300" })
-                @Html.ValidationMessageFor(m => m.MinAmmountCash)
+                @Html.LabelFor(m => m.MinAmmountCash, new { @class = "col-lg-2 control-label" })
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(m => m.MinAmmountCash, new { @class = "form-control", autofocus = "autofocus", placeholder = "300" })
+                    @Html.ValidationMessageFor(m => m.MinAmmountCash)
+                </div>
             </div>
         </div>
         <div class="form-group">
-
-            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
-            <button type="submit" class="btn btn-primary">Save</button>
-
+            <div class="col-lg-10 col-lg-offset-2">
+                <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
         </div>
     }
 </div>    @section Scripts {
