--- a/OctagonPlatform/Views/Terminals/Create.cshtml
+++ b/OctagonPlatform/Views/Terminals/Create.cshtml
@@ -6,8 +6,10 @@
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
 
-
 <br/>
+<br/>
+<br/>
+<br />
 
 <div>
     <br><br />
@@ -254,7 +256,13 @@
             </div>
         </div>
     }
-</div>    @section Scripts {
+</div> 
+
+<br/>
+
+
+
+@section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
         @Scripts.Render("~/bundles/xpopulate")
     }
