--- a/OctagonPlatform/Views/TerminalMessages/Index.cshtml
+++ b/OctagonPlatform/Views/TerminalMessages/Index.cshtml
@@ -24,7 +24,7 @@
             @Html.DisplayFor(modelItem => item.Direction)
 
             <div id="@item.Id.ToString()" class="panel-collapse collapse">
-                <img id="loading3" style="display:none" src="~/Content/loading_icon.gif" alt="" />
+                <div class="loader"></div>
             </div>
 
         </div>
