--- a/OctagonPlatform/Views/TerminalContacts/Create.cshtml
+++ b/OctagonPlatform/Views/TerminalContacts/Create.cshtml
@@ -55,7 +55,7 @@
 
         </div>
         <div>
-            <img id="loading" style="display: none" src="~/Content/loading_icon.gif" alt="" />
+            <div class="loader"></div>
         </div>
     </div>
     <div class="form-group">
@@ -72,7 +72,7 @@
 
         </div>
         <div>
-            <img id="loading" style="display: none" src="~/Content/loading_icon.gif" alt="" />
+            <div class="loader"></div>
         </div>
     </div>
     <div class="form-group">
@@ -88,7 +88,7 @@
             @Html.ValidationMessageFor(m => m.CityId)
         </div>
         <div>
-            <img id="loading" style="display: none" src="~/Content/loading_icon.gif" alt="" />
+            <div class="loader"></div>
         </div>
     </div>
     <div class="form-group">
