--- a/OctagonPlatform/Octagon/assets/css/Dashboard.css
+++ b/OctagonPlatform/Octagon/assets/css/Dashboard.css
@@ -97,8 +97,14 @@ a {
 
 .field-validation-error {
     color: red;
+    font-style: italic;
 }
 
 .input-validation-error {
     border: 2px solid red;
+}
+
+#PlaceHolderForm::-moz-placeholder
+{
+    font-size: x-small
 }
