update navbar, form partner

--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -8,9 +8,9 @@
 <br />
 <br />
 <br />
-<br />
+
 <div class="container">
-    <h1 class="page-header">List of Partners</h1>
+    <h1 class="page-header">Partners</h1>
     @Html.ActionLink(
         linkText: "Add Partner",
         actionName: "Create",
