--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -9,8 +9,6 @@
     <!-- /.navbar-header -->
     <div class="row">
         <div class="col-md-2" >
-
-            
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -18,9 +16,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <div style="padding-top: 5px;padding-left: 55px;">
-                <a class="" href="#"><img src="~/Octagon/assets/img/logo.png" width="120"></a>
+                <img src="~/Octagon/assets/img/logo.png" width="120">
                 </div>
-                <p>&nbsp;</p>
+                
         </div>
         <div class="col-md-8" style="text-align:center;">
 
