--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -46,7 +46,7 @@
             <th>Balance</th>
             <th>Edit</th>
             <th>Delete</th>
-            <th>Details</th>
+  <!--          <th>Details</th>         -->
 
         </tr>
         </thead>
@@ -55,13 +55,13 @@
 
         @foreach (var item in Model)
         {
-            <tr>
-                <td>@item.TerminalId</td>
+            <tr>              
+                <td>@Html.ActionLink(item.TerminalId, "Details", new { id = item.Id })</td>
                 <td>@item.Partner.BusinessName</td>
                 <td>@item.LocationType.Name</td>
                 <td>@item.Address1, @item.City.Name, @item.State.Name, @item.Zip</td>
                 <td>@item.Phone</td>
-            @*    <td>@item.Country.Name</td>
+                @*    <td>@item.Country.Name</td>
                 <td>@item.City.Name</td>
                 <td>@item.State.Name</td> *@
                 <td>@if (item.Status.ToString().Equals("Active"))
@@ -97,13 +97,13 @@
                     <i class="fa fa-pencil"style="font-size: 16px; color: darkblue"></i> @Html.ActionLink("Edit", "Edit", new {id = item.Id})
                 </td>
                 <td>
-                  @*  <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id }) *@              
+                    @*  <i class="fa fa-trash"style="font-size:16px;color:red"></i> @Html.ActionLink("Delete", "Delete", new { id = item.Id }) *@
 
-                    <i class="fa fa-trash"style="font-size:16px;color:red"></i><button type="button" style="margin: -2px;" value ="@item.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeleteTerminalModal">Delete</button>
-                    
-                    
+                    <i class="fa fa-trash"style="font-size: 16px; color: red"></i><button type="button" style="margin: -2px;" value="@item.Id" id="deleteItem" class="btn-link" data-toggle="modal" data-target="#DeleteTerminalModal">Delete</button>
+
+
                 </td>
-                <td><i class="fa fa-list"style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new { id = item.Id })</td>
+                @*  <td><i class="fa fa-list"style="font-size:16px;color:green"></i> @Html.ActionLink("Details", "Details", new { id = item.Id })</td> *@
             </tr>
         }
         </tbody>
