Terminal Details View edited: now, showing Terminal ID

--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -11,7 +11,7 @@
 <br />
 <br />
 <br />
-<h3>Terminal: <strong class="alert-info">@Model.Id</strong></h3>
+<h3>Terminal: <strong>@Model.TerminalId</strong></h3>
 
 <hr />
 @Html.ActionLink(linkText: "View messages", actionName: "Index", controllerName: "TerminalMessages", routeValues: new
