--- a/OctagonPlatform/Views/TerminalMessages/MessagesDetail.cshtml
+++ b/OctagonPlatform/Views/TerminalMessages/MessagesDetail.cshtml
@@ -1,7 +1,12 @@
 ﻿@model Dictionary<string, string>
-
+<br/>
+<br />
+<br />
+<br />
+<h2 class="alert-warning">@ViewBag.Error.</h2>
 <table class="table table-striped table-hover ">
 
+    
     <tr class="info">
         <th>Field Label</th>
         <th>Value</th>
