--- a/OctagonPlatform/Views/Shared/Sections/Footer.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Footer.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <footer id="footer">
-    <div style="background: gray; text-align: center; margin: 0px; padding:10px">
+    <div >
         <p style="color:white; font-family: Helvetica">Copyright (c) 2017 Octagon</p>
-    </div>
+       </div>
 </footer>
 
