--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -46,7 +46,7 @@
                     USD @Session["LTC"] &nbsp;&nbsp;&nbsp;
                 </div>
             </div>
-            <h1>@Session["businessName"].ToString()</h1>
+            <h1 class="businessName">@Session["businessName"].ToString()</h1>
         </div>
         <div class="col-md-2">
 
