padding-bottom added to create new partner view

--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -124,10 +124,10 @@
                 </div>
             </div>
             </div>
-            <div>
+        <div style="padding-bottom: 20px">      
                 <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
-                <button type="submit" class="btn btn-primary">Save</button>
-            </div>
+                <button type="submit" class="btn btn-primary">Save</button>            
+        </div>
        
 
     }
