--- a/OctagonPlatform/Views/Terminals/Modals/DeleteTerminalModal.cshtml
+++ b/OctagonPlatform/Views/Terminals/Modals/DeleteTerminalModal.cshtml
@@ -14,7 +14,7 @@
                     @Html.AntiForgeryToken()
                     <input type="hidden" id="itemId" name="id" value="" />
                     <div class="form-group">
-                        <input type="submit" value="Delete" class="btn btn-primary" id="confirm" />
+                        <input type="submit" value="Delete" class="btn btn-danger" id="confirm" />
                         <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
                     </div>
                 }
