--- a/OctagonPlatform/Octagon/assets/css/Dashboard.css
+++ b/OctagonPlatform/Octagon/assets/css/Dashboard.css
@@ -113,15 +113,15 @@ a {
     font-size: 55px;
     font-family: "Helvetica";
     color: rgb(0, 168, 225);
-    
     text-shadow: 0px 1px 1.56px rgba(0, 0, 0, 0.35);
     -moz-transform: matrix( 0.85884798696826,0,0,0.85884798696826,0,0);
     -webkit-transform: matrix( 0.85884798696826,0,0,0.85884798696826,0,0);
     -ms-transform: matrix( 0.85884798696826,0,0,0.85884798696826,0,0);
-    
     left: -20.167px;
     top: 426.802px;
     z-index: 2;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 #footer {
