--- a/OctagonPlatform/Views/Shared/Sections/Footer.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Footer.cshtml
@@ -1,7 +1,5 @@
-﻿
-<footer id="footer">
-    <div >
-        <p style="color:white; font-family: Helvetica">Copyright (c) 2017 Octagon</p>
-       </div>
+﻿<footer id="footer">
+    <div>
+        <p style="color: white; font-family: Helvetica">Copyright (c) 2017 Octagon</p>
+    </div>
 </footer>
-
