--- a/OctagonPlatform/Octagon/assets/css/Dashboard.css
+++ b/OctagonPlatform/Octagon/assets/css/Dashboard.css
@@ -133,8 +133,8 @@ a {
     color: white;
     text-align: center;
     background: gray;
-    padding-top: 30px;
-
+    padding-top: 25px;
+    padding-bottom: 15px;
 }
 
 .form-control{
@@ -145,4 +145,24 @@ a {
     color:white;
     background-color:red;
     width: 180px;
+}
+
+.form-control1 {
+    width: 80%;
+    display: block;
+   
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
